--- a/custom_components/fodey/manifest.json
+++ b/custom_components/fodey/manifest.json
@@ -5,7 +5,7 @@
   "version": "v0.0.1",
   "documentation": "https://www.home-assistant.io/integrations/fodey",
   "requirements": [
-    "pyfodey@https://gitlab.liacmedia.nl/api/v4/projects/51/packages/pypi==0.12"
+    "pyfodey@git+https://gitlab.liacmedia.nl/fodey/pyfodey.git@v0.12#pyfodey==0.12"
   ],
   "ssdp": [],
   "zeroconf": [],
